SAD HW2: Prob3